chore: fix the image name

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -55,7 +55,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: |
-            twillo-dev-challenge/rembo
+            isitayush/rembo
           tags: |
             type=ref,event=branch
             type=ref,event=pr
