chore: add lint and format along with their ci checks

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -13,6 +13,28 @@ env:
   FORCE_COLOR: 3
 
 jobs:
+  format:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout.
+        uses: actions/checkout@v3
+
+      - name: setup.
+        uses: ./actions/setup
+
+      - name: format.
+        run: pnpm format
+  typecheck:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout.
+        uses: actions/checkout@v3
+
+      - name: setup.
+        uses: ./actions/setup
+
+      - name: typecheck.
+        run: pnpm typecheck
   lint:
     runs-on: ubuntu-latest
     steps:
@@ -35,7 +57,7 @@ jobs:
 
       - name: build.
         run: pnpm build
-  docker-build:
+  docker:
     runs-on: ubuntu-latest
     steps:
       - name: checkout.
