--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "rembo",
   "version": "1.0.0",
   "description": "",
+  "keywords": [],
+  "license": "ISC",
+  "author": "",
   "scripts": {
     "typecheck": "tsc --noEmit",
     "format": "prettier . --check --cache --cache-location='node_modules/.cache/.prettiercache'",
@@ -15,25 +18,22 @@
     "dev:esbuild": "pnpm run build --watch",
     "dev": "run-p dev:*"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.14.5",
-    "esbuild": "^0.21.5",
-    "npm-run-all": "^4.1.5",
-    "typescript": "^5.4.5",
-    "prettier": "^3.0.3",
-    "prettier-plugin-packagejson": "^2.4.3",
-    "@typescript-eslint/eslint-plugin": "^6.7.0",
-    "@typescript-eslint/parser": "^6.7.0",
-    "eslint": "8.48.0"
-  },
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "twilio": "^5.1.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.14.5",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
+    "esbuild": "^0.21.5",
+    "eslint": "8.48.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^3.0.3",
+    "prettier-plugin-packagejson": "^2.4.3",
+    "typescript": "^5.4.5"
   }
 }
