--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,15 +1,22 @@
+# Use a minimal Node.js image for the build stage
 steps:
-  - name: 'node:20'
+  - name: 'node:18-alpine'  # Adjust Node.js version if needed
     entrypoint: npm
     args: ['install']
-  - name: 'node:20'
+  - name: 'node:18-alpine'  # Reuse the same image for efficiency
+    workdir: /usr/src/app  # Define working directory
+    copy:  # Copy your application code
+      - . .
     entrypoint: npm
-    args: ['run', 'build']
-  - name: 'node:20'
-    entrypoint: npm
-    cmd: ['run', 'start']
+    cmd: ['run', 'build']
+  # Use a smaller runtime image for deployment (optional)
+  - name: 'node:18-slim'  # Smaller image for deployment
+    workdir: /usr/src/app
+    copy:
+      - . .
     env:
       - HOST=$_HOST # Accessing Cloud Build Trigger Variable
       - PORT=$_PORT
       - TWILIO_AUTH_TOKEN=$_TWILIO_AUTH_TOKEN
       - TWILIO_ACCOUNT_SID=$_TWILIO_AACCOUNT_SID
+    cmd: ['npm', 'start']
