--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -19,4 +19,4 @@ steps:
       - start
     entrypoint: npm
 options:
-  defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
+  logging: CLOUD_LOGGING_ONLY
