--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -132,7 +132,7 @@ jobs:
 
       - name: deploy to cloud run.
         run: |
-          IMAGE_URL="docker.io/isitayush/rembo:${{ env.tag }}"
+          IMAGE_URL=docker.io/${{ env.TAG }}
           echo "deploying to Cloud Run with image $IMAGE_URL"
           gcloud run deploy rembo \
             --image=$IMAGE_URL \
