--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dev": "run-p dev:*"
   },
   "dependencies": {
+    "@google-cloud/vertexai": "^1.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
