♻️ Updated twilio endpoint .env & config value

--- a/.example.env
+++ b/.example.env
@@ -2,6 +2,7 @@ HOST="0.0.0.0"
 PORT=3000
 TWILIO_AUTH_TOKEN="your_auth_token"
 TWILIO_ACCOUNT_SID="your_account_sid"
+TWILIO_ENDPOINT=https://your-api-endpoint.com
 MYSQL_HOST=127.0.0.1
 MYSQL_DB=remembo
 MYSQL_USER=root
