--- a/.example.env
+++ b/.example.env
@@ -2,3 +2,4 @@ HOST="0.0.0.0"
 PORT=3000
 TWILIO_AUTH_TOKEN="your_auth_token"
 TWILIO_ACCOUNT_SID="your_account_sid"
+DATABASE_URL="mysql://user:password@host:port/database"
