--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
     "prisma": "^5.15.1",
-    "twilio": "^5.1.1"
+    "twilio": "^5.1.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
