--- a/.example.env
+++ b/.example.env
@@ -2,4 +2,8 @@ HOST="0.0.0.0"
 PORT=3000
 TWILIO_AUTH_TOKEN="your_auth_token"
 TWILIO_ACCOUNT_SID="your_account_sid"
+TWILIO_PHONE_NUMBER="your_twilio_phone_number"
 DATABASE_URL="mysql://user:password@host:port/database"
+GCP_PROJECT_ID="your_project_id"
+GCP_REGION="your_region"
+VERTEX_MODEL="your_model"
