--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -98,6 +98,7 @@ jobs:
             --set-env-vars TWILIO_ACCOUNT_SID=${{ secrets.TWILIO_ACCOUNT_SID }} \
             --set-env-vars TWILIO_PHONE_NUMBER=${{ secrets.TWILIO_PHONE_NUMBER }} \
             --set-env-vars VERTEX_MODEL=${{ secrets.VERTEX_MODEL }} \
+            --set-env-vars DATABASE_URL=${{ secrets.DATABASE_URL }} \
             --set-env-vars GCP_PROJECT_ID=${{ vars.GCP_PROJECT_ID }} \
             --set-env-vars GCP_REGION=${{ vars.GCP_REGION }} \
             --port ${{ vars.PORT }} \
