📝 Updated LICENSE & project description

--- a/package.json
+++ b/package.json
@@ -1,9 +1,43 @@
 {
-  "name": "rembo",
+  "name": "memba",
   "version": "1.0.0",
-  "description": "",
-  "keywords": [],
-  "license": "ISC",
+  "description": "SMS reminders for elderly using Twilio API, Vertex AI & Google Cloud services.",
+  "keywords": [
+    "memba",
+    "rememba",
+    "remember",
+    "reminder",
+    "SMS",
+    "twilio",
+    "vertex",
+    "ai",
+    "google",
+    "cloud",
+    "run",
+    "build",
+    "lmm",
+    "gemini",
+    "api",
+    "prisma",
+    "typescript",
+    "ts",
+    "node",
+    "js",
+    "express"
+  ],
+  "license": "GPL-3.0-only",
+  "contributors": [
+    {
+      "name": "Ayush",
+      "email": "ayush.keshav2004@gmail.com",
+      "url": "https://github.com/is-it-ayush"
+    },
+    {
+      "name": "Richard",
+      "email": "hello@richardev.com",
+      "url": "https://github.com/richardevcom"
+    }
+  ],
   "scripts": {
     "typecheck": "tsc --noEmit",
     "format": "prettier . --check --cache --cache-location='node_modules/.cache/.prettiercache'",
@@ -46,12 +80,5 @@
     "prettier": "^3.0.3",
     "prettier-plugin-packagejson": "^2.4.3",
     "typescript": "^5.4.5"
-  },
-  "contributors": [
-    {
-      "name": "Ayush",
-      "email": "ayush.keshav2004@gmail.com",
-      "url": "https://github.com/is-it-ayush"
-    }
-  ],
+  }
 }
