♻️ Updated endpoint .env

--- a/.example.env
+++ b/.example.env
@@ -3,6 +3,7 @@ PORT=3000
 TWILIO_AUTH_TOKEN="your_auth_token"
 TWILIO_ACCOUNT_SID="your_account_sid"
 TWILIO_PHONE_NUMBER="your_twilio_phone_number"
+API_ENDPOINT="https://<API_ENDPOINT>/message"
 DATABASE_URL="mysql://user:password@host:port/database"
 GCP_PROJECT_ID="your_project_id"
 GCP_REGION="your_region"
